fix: Spacing Control UI improvements

--- a/src/components/dimention-control/editor.scss
+++ b/src/components/dimention-control/editor.scss
@@ -1,37 +1,44 @@
 .components-panel__body { 
     .uagb-spacing-control {
-     position: relative;
-     margin-bottom: 1.5em;    
-     .components-base-control__label {
-         margin-bottom: 5px;
-     }
-     .components-base-control__help {
-         margin-top: -8px;
-     }
-     input[type="number"].uagb-spacing-control__number {
-         border-radius: 0;
-         box-shadow: none !important;
-         height: 30px;
-         margin: 0 -1px 0 0;
-         padding-right: 1px;
-         width: 25%;
-     }
-     input[type="number"].uagb-spacing-control__number:focus {
-         z-index: 1;
-     }
-     input[type="number"].uagb-spacing-control__number{
-         border-left:1px solid #d5dadf;
-         -webkit-border-radius: 3px 0 0 3px;
-         border-right: 1px solid #d5dadf;
-         border-color:#d5dadf;
-     }
-     .uagb-spacing-control__mobile-controls button[type=button] > span {
-         cursor: pointer;
-         width: 15px;
-         height: 15px;
-         font-size: 15px;
-     }
-   }
+        position: relative;
+        margin-bottom: 1.5em;    
+        .components-base-control__label {
+            margin-bottom: 5px;
+        }
+        .components-base-control__help {
+            margin-top: -8px;
+        }
+        input[type="number"].uagb-spacing-control__number {
+            border-radius: 0;
+            box-shadow: none !important;
+            height: 30px;
+            margin: 0 -1px 0 0;
+            padding-right: 1px;
+            width: 25%;
+        }
+        input[type="number"].uagb-spacing-control__number:focus {
+            z-index: 1;
+        }
+        input[type="number"].uagb-spacing-control__number{
+            border-left:1px solid #d5dadf;
+            border-right: 1px solid #d5dadf;
+            border-color:#d5dadf;
+        }
+        .uagb-spacing-control__mobile-controls button[type=button] > span {
+            cursor: pointer;
+            width: 15px;
+            height: 15px;
+            font-size: 15px;
+        }
+        .uagb-spacing-control__inputs > .uagb-spacing-control__number:first-child {
+            -webkit-border-radius: 3px 0 0 3px;
+            border-radius: 3px 0 0 3px;
+        }
+        .uagb-spacing-control__inputs > .uagb-spacing-control__number:last-child {
+            -webkit-border-radius: 0 3px 3px 0;
+            border-radius: 0 3px 3px 0;
+        }
+    }
       
      .uagb-spacing-control__header, .uagb-spacing-control__inputs {
        display: flex;
@@ -104,9 +111,6 @@
              text-align: center;
              width: 25%;
          }
-         span:last-of-type {
-             width: 30px;
-         }
      }
  
      .uagb-spacing-control__label {
@@ -122,7 +126,6 @@
          font-size: 12px;
          margin-bottom: 1px;
          margin-top: 3px;
-         margin-left: 18px;
      }
      .uagb-spacing-control__actions {
          position: relative;
@@ -136,11 +139,11 @@
      padding: 0 2px;
      text-transform: uppercase;
      font-size: 9px;
-     &.is-secondary.is-small {
+     &.is-small {
          box-shadow:unset;
          margin-right:10px;
      }
-     &.is-primary.is-secondary.is-small {
+     &.is-primary.is-small {
          background:unset;
          background-color:unset;
          color:#001ffd;
